<resources>
    <string name="app_name">IoT FuncGen</string>
    <string name="title_activity_main_activity2">activity_main_activity2</string>
    <string name="simple_scanner_activity">ZBar Scanner - Simple Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hint_ip_address">IP Address or Hostname</string>
    <string name="ping">Ping</string>
    <string name="wol">Wake-On-Lan</string>
    <string name="port_scan">Port Scan</string>
    <string name="github_page">Github</string>
    <string name="github_url">https://github.com/stealthcopter/AndroidNetworkTools</string>
    <string name="subnet">Subnet Devices</string>
    <string name="press_connect">Press CONNECT to configure SimpleMed+ Wi-Fi network</string>
    <string name="press_recovery">Press RECOVERY to begin SimpleMed+ firmware update recovery</string>
    <string name="todo">TODO</string>
    <string name="press_ok_button">Press OK button, then scan the barcode that appears on the bottom of SimpleMed+ device, as shown in the figure below:</string>
    <string name="iot_function_generator">IoT Function Generator</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="select_desired_settings_menu">Select desired settings menu…</string>
    <string name="iot_funcgen_v1_2">IoT FuncGen V1.2</string>

    <string name="sine">SINE</string>
    <string name="triangle">TRIANGLE</string>
    <string name="square">SQUARE</string>
    <string name="dc">OFF</string>
    <string name="brightness">Brightness</string>
    <string name="bias">Bias</string>
    <string name="channel_a">Channel A:</string>
    <string name="lcd">LCD</string>
    <string name="contrast">Contrast</string>
    <string name="frequency">Frequency</string>
    <string name="exit_to_main_menu">Exit to main menu</string>
    <string name="boot_option">Boot Option</string>
    <string name="get_info">Get Info</string>
    <string name="off">OFF</string>
    <string name="amplitude">Amplitude</string>
    <string name="channel_b">Channel B:</string>
    <string name="exit_from_app">Exit From App</string>
    <string name="initiate_direct_connection">Initiate Direct Connection</string>
    <string name="wi_fi_network_pairing_wizard">Wi-Fi network pairing wizard</string>
    <string name="initiate_wlan_network_connection">Initiate WLAN Network connection</string>
</resources>
